Unreal wonderful table

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+*{
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin-right: 400px;
+  background-color: black;
+  transform: translate(25%,50%);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.zigzag{
+overflow: hidden;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+th,td{
+  padding: .25rem .5rem;
+  text-align: left;
+  vertical-align: top;
 }
-
-.App-link {
-  color: #61dafb;
+th{
+  background-color: #099;
+  color: #fff;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+td{
+  background-color: #eee;
+}
+tr{
+  transition: all 2s ease-in-out;
+  &.slide-out{
+    transform: translateX(100%);
   }
 }
